--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Heroku is the best</title>
   </head>
+  <style>
+    body {
+      position: relative;
+    }
+
+    .dot {
+      width: 40px;
+      height: 40px;
+      background: #283593;
+    }
+  </style>
   <body>
+    <div class="dot"></div>
     <div class="json">
       yo
     </div>
