--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   <style>
     body {
       position: relative;
+      width: 100vw;
+      height: 100vh;
     }
 
     .dot {
+      position: absolute;
+      top: calc(50% - 40px);
+      left: calc(50% - 40px);
       width: 40px;
       height: 40px;
       background: #283593;
