--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
       height: 100vh;
     }
 
+    .canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    canvas {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      z-index: 30;
+    }
+
     .dot {
       position: absolute;
+      z-index: 50;
       top: calc(50% - 40px);
       left: calc(50% - 40px);
       width: 40px;
@@ -24,8 +40,8 @@
   </style>
   <body>
     <div class="dot"></div>
-    <div class="json">
-      yo
+    <div class="canvas">
+      <canvas></canvas>
     </div>
     <div class="test"></div>
     <script src="./code.js"></script>
