--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     }
   </style>
   <body>
+    <div class="mobile">
+      <button> Clear Canvas</button>
+    </div>
     <div class="dot"></div>
     <div class="canvas">
       <canvas></canvas>
