webpack and ts for front

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       <canvas></canvas>
     </div>
     <div class="test"></div>
-    <script src="./code.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
