--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,9 @@
     <div class="app"></div>
 
     <template data-app="mobile">
-      Try to tap couple times
+      <div>
+        Try to tap couple times
+      </div>
     </template>
 
 
