--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,15 @@
   </head>
   <style>
     body {
+      padding: 0;
+      margin: 0;
+    }
+
+    .app {
       position: relative;
       width: 100vw;
       height: 100vh;
       cursor: pointer;
-      padding: 0;
-      margin: 0;
     }
 
     .canvas {
