--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
       height: 40px;
       background: #283593;
       border-radius: 50%;
+      transition: transform 0.05s ease;
     }
   </style>
   <body>
